# sql_custom_types

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  main.py  pyproject.toml
migrations/2024-05-01-083307_non_empty_text/: down.sql  up.sql
migrations/2024-05-01-083458_simple_table/: up.sql
src/: custom_types.rs  lib.rs  main.rs  models.rs  non_empty_string.rs  schema.rs
