[package]
name = "sql_custom_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = "1.0.199"
serde_derive = "1.0.199"
log = "0.4"
